# mcdm

./: .gitignore  pyproject.toml
.github/: copilot-instructions.md
data/: 00_data.xlsx  01_SAW.csv  01_SAW.xlsx  01_SAW_raw_data.xlsx  01_examples.xlsx  01_examples_with_answer.xlsx
figures/mermaid/: 01_saw.mermaid  02_ahp.mermaid  03_anp.mermaid
lecture_notebooks/: Sample_Exercise.ipynb  ntbk1 - Introduction to Python Programming.ipynb  ntbk10 - PROMETHEE.ipynb  ntbk10b - PROMETHEE.ipynb  ntbk11 - Introduction to Multi Objective Decision Making.ipynb  ntbk11 - Linear Programming Review and Multi-Objective Optimization.ipynb  ntbk12 - Pareto Optimization.ipynb  ntbk12b - Pareto Optimization.ipynb  ntbk13 - Goal Programming.ipynb  ntbk6b - Analytical_Hierarchy_Process.ipynb  ntbk8b - TOPSIS.ipynb  ntbk9 - ELECTRE.ipynb  ntbk9b - ELECTRE.ipynb
notebooks/: MCDM_Quiz1.ipynb  Sample_Exercise.ipynb  ntbk2 - Python Loops and Conditionals.ipynb  ntbk3 - Functions.ipynb  ntbk4 - Collections.ipynb  ntbk5 - Simple_Additive_Weightage.ipynb  ntbk5b - Simple_Additive_Weightage.ipynb  ntbk6 - Analytical_Hierarchy_Process.ipynb  ntbk6b - Analytical_Hierarchy_Process.ipynb  ntbk7 - Analytic_Network_Process.ipynb  ntbk7b - Analytic_Network_Process.ipynb  ntbk8 - TOPSIS.ipynb  ntbk9 - ELECTRE.ipynb
