[project]
name = "mdcm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab-git>=0.51.2",
    "jupyterlab-lsp>=5.2.0",
    "lab>=8.4",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.4.0",
    "pymcdm>=1.3.1",
    "python-lsp-server[all]>=1.13.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
]
